pipeline/policy/require-tls-on-ingress-enforced/enforce-tls-on-ingress.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-tls-on-ingress
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-tls
      match:
        resources:
          kinds:
            - Ingress
      mutate:
        patchStrategicMerge:
          spec:
            tls:
              - secretName: my-cert
